--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "crystals-kyber": "^5.1.0",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "socks5": "^1.0.1"
